Actualizacion
Aplicación launchable ejecutando compilador.sh

Interfaz básica, pendiente de implementación final de toda la funcionalidad de la aplicación